# LocalTube

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  dockerfile
.github/workflows/: ci.yaml
assets/views/: base.html
assets/views/media/: list.html  show.html
assets/views/source/: create.html  edit.html  list.html  shared.html  show.html
assets/views/status/: index.html  restart_result.html
config/: development.yaml  production.yaml  scheduler.yaml  test.yaml
examples/: playground.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20241110_170457_sources.rs  m20241111_110838_medias.rs  m20250826_090400_add_last_scheduled_refresh_to_sources.rs  m20260105_000000_drop_loco_job_tables.rs
src/: app.rs  lib.rs  ws.rs  ytdlp.rs  ytdlp_debug.rs
src/controllers/: media.rs  metrics.rs  mod.rs  source.rs  status.rs
src/gluetun/: config.rs  controller.rs  supervisor.rs
src/initializers/: download_deps.rs  gluetun.rs  mod.rs  refresh_sources.rs  view_engine.rs  ws_status.rs
src/job_tracking/: manager.rs  metrics.rs  mod.rs  task.rs
src/mailers/: auth.rs
src/models/: medias.rs  mod.rs  sources.rs  users.rs
src/models/_entities/: medias.rs  mod.rs  prelude.rs  sources.rs  users.rs
src/services/: retry.rs
src/tasks/: refresh_indexes.rs
src/views/: media.rs  mod.rs  source.rs  status.rs
src/workers/: fetch_media.rs  fetch_source_info.rs  mod.rs
tests/: gluetun_restart_tests.rs  media_stream_tests.rs  source_view_render_tests.rs  status_view_render_tests.rs  ws_state_tests.rs
tests/models/: medias.rs  mod.rs  sources.rs  users.rs
tests/models/snapshots/: can_validate_model@users.snap
tests/requests/: auth.rs  prepare_data.rs
tests/tasks/: mod.rs  refresh_indexes.rs  seed.rs
