[workspace]

[package]
default-run = "localtube-cli"
edition = "2021"
name = "localtube"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.14.0" }

[dependencies]

loco-rs = { workspace = true }
migration = { path = "migration" }

async-trait = "0.1.74"
chrono = "0.4"
sea-orm = { version = "1.1.0", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.33.0", default-features = false }
tracing = "0.1.40"
validator = { version = "0.19" }

axum = { version = "0.8.1", features = ["ws"] }
futures-util = "0.3"
include_dir = "0.7"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
uuid = { version = "1.6.0", features = ["v4"] }
once_cell = "1.19.0"

# view engine i18n
fluent-templates = { version = "0.8.0", features = ["tera"] }
unic-langid = "0.9.4"
# /view engine

# app
yt-dlp = { version = "1.2.3", features = ["tracing"] }
tokio-process-terminate = "0.3.2"

[[bin]]
name = "localtube-cli"
path = "src/bin/main.rs"
required-features = []

[[bin]]
name = "tool"
path = "src/bin/tool.rs"
required-features = []

[dev-dependencies]
insta = { version = "1.34.0", features = ["redactions", "yaml", "filters"] }
loco-rs = { workspace = true, features = ["testing"] }
rstest = "0.21.0"
serial_test = "3.1.1"
