[workspace]

[package]
default-run = "localtube-cli"
edition = "2021"
name = "localtube"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
loco-rs = { version = "0.16.4" }

[dependencies]

loco-rs = { workspace = true }
migration = { path = "migration" }

async-trait = "0.1.89"
chrono = "0.4.42"
sea-orm = { version = "1.1.19", features = [
  "sqlx-sqlite",
  "sqlx-postgres",
  "runtime-tokio-rustls",
  "macros",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
tokio = { version = "1.49.0", default-features = false }
tracing = "0.1.44"
validator = { version = "0.20.0" }

axum = { version = "0.8.8", features = ["ws"] }
futures-util = "0.3.31"
include_dir = "0.7.4"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
uuid = { version = "1.19.0", features = ["v4"] }

# view engine i18n
fluent-templates = { version = "0.13.2", features = ["tera"] }
tera = "1.20.1"
unic-langid = "0.9.6"
# /view engine

# app
yt-dlp = { version = "1.4.7", features = ["tracing"] }
tokio-process-terminate = "0.3.2"
reqwest = { version = "0.12.28", features = ["json", "rustls-tls"] }
thiserror = "2.0.17"

[[bin]]
name = "localtube-cli"
path = "src/bin/main.rs"
required-features = []

[[bin]]
name = "tool"
path = "src/bin/tool.rs"
required-features = []

[dev-dependencies]
insta = { version = "1.46.0", features = ["redactions", "yaml", "filters"] }
loco-rs = { workspace = true, features = ["testing"] }
rstest = "0.26.1"
serial_test = "3.3.1"
